maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:15: error: expected class or object definition
def keepHandOnSideWall(c=Int):Int ={
^PledgeMaze:32: error: expected class or object definition
def isDirectionFree(dir:Direction):Boolean ={
^PledgeMaze:45: error: Unmatched closing brace '}' ignored here
}
^